--- a/login.html
+++ b/login.html
@@ -486,7 +486,7 @@
             const gender = document.getElementById('patientGender').value;
 
             if (name && age && gender) {
-                window.location.href = 'http://localhost:8508';
+                window.location.href = 'https://pinkscan-jfyyjafxt2yuf2fcydz5wv.streamlit.app/';
             } else {
                 alert('Please fill in all fields.');
             }
@@ -498,7 +498,7 @@
             const id = document.getElementById('doctorId').value;
 
             if (name && id) {
-                window.location.href = 'http://localhost:8513';
+                window.location.href = 'https://pinkscan-umdxztvukmq5gx2ulyt3yh.streamlit.app/';
             } else {
                 alert('Please fill in all fields.');
             }
